grid layout complete, overflow issue remain,

--- a/app.css
+++ b/app.css
@@ -66,3 +66,18 @@ body {
     top: 10vh;
     height: 50vh;
 }
+
+.grid-container {
+    display: inline-grid;
+    grid-template-columns: auto auto;
+    /* padding: 10px; */
+  }
+  
+  .grid-item {
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    /* padding: 20px; */
+    /* font-size: 30px; */
+    text-align: center;
+    height: 2em;
+  }
